# ModulesOnRails

./: .gitattributes  .gitignore  .luaurc  .vsls.json  404.html  CLAUDE.md  CONTEXT-MAP.md  CONTRIBUTING.md  README.md  coverage-state.json  coverage.json  coverage.luau  default.project.json  index.html  lunr-index-1724295933082.json  lunr-index-1724296051192.json  lunr-index-1724296979032.json  lunr-index-1724297014897.json  lunr-index-1724297187763.json  lunr-index-1724298755747.json  lunr-index-1724298997534.json  lunr-index-1724299184859.json  lunr-index-1724309150642.json  lunr-index-1724310339561.json  lunr-index-1724374177606.json  lunr-index-1724701605167.json  lunr-index-1724795515778.json  lunr-index-1725936946271.json  lunr-index-1726615359880.json  lunr-index-1727126403164.json  lunr-index-1727976949912.json  lunr-index-1728670132670.json  lunr-index-1728670441861.json  lunr-index-1728670532242.json  lunr-index-1729208418405.json  lunr-index-1729208530607.json  lunr-index-1729208588613.json  lunr-index-1740213946153.json  lunr-index-1740218552376.json  lunr-index-1740708564397.json  (+94 more)
.moonwave/: custom.css
tools/coverage/engine/: Cargo.toml
tools/coverage/engine/src/: collect.rs  instrument.rs  main.rs  model.rs  mutate.rs  parse.rs  pipeline.rs  scopes.rs
tools/coverage/engine/tests/: cli.rs  golden.rs
tools/coverage/engine/tests/fixtures/bad_parse_pkg/src/: broken.luau
tools/coverage/engine/tests/fixtures/instrumented_pkg/src/: init.luau
tools/coverage/engine/tests/golden/: simple_pkg.map.const.json  simple_pkg.map.json  simple_pkg.mutants.json
(+1972 files in other folders)
