[package]
name = "coverage-engine"
version = "0.1.0"
edition = "2021"
description = "AST-based Luau coverage instrumentation engine (full_moon)"

[[bin]]
name = "coverage-engine"
path = "src/main.rs"

[dependencies]
full_moon = { version = "2.2", features = ["luau"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
walkdir = "2"

[profile.release]
opt-level = 2
